Add debug and error handling for SSH commands

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,17 +5,7 @@ stages:
   - deploy
 
 variables:
-  TARG    - echo "SSH key finge    - echo "Please add this public key to server's ~/.ssh/authorized_keys"
-    - cat ~/.ssh/id_rsa.pub
-    - echo "Run on server mkdir -p ~/.ssh && echo '$(cat ~/.ssh/id_rsa.pub)' >> ~/.ssh/authorized_keys && chmod 600 ~/.ssh/authorized_keys"
-    - echo "====================================="
-    - exit 1
-    - echo "Copying project file to server""
-    - ssh-keygen -lf ~/.ssh/id_rsa.pub
-    - echo "=== IMPORTANT Copy this public key to server ==="
-    - echo "Run this on server echo '$(cat ~/.ssh/id_rsa.pub)' >> ~/.ssh/authorized_keys"
-    - echo "================================================"
-    - echo "Adding server to known_hosts"NCH: "CICD_2"
+  TARGET_BRANCH: "CICD_2"
   DOCKER_TLS_CERTDIR: ""
   DOCKER_HOST: tcp://docker:2375
   IMAGE_NAME: "$CI_REGISTRY_IMAGE/team03-webapi"
