--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,11 +35,13 @@ prepare:
 
 build:
   stage: build
-  image: mcr.microsoft.com/dotnet/sdk:8.0
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
   rules:
     - if: $CI_COMMIT_BRANCH == $TARGET_BRANCH
   before_script:
-    - apt-get update && apt-get install -y git curl openssh-client tar gzip
+    - apk update && apk add --no-cache git openssh-client tar gzip
     - echo "Configuring Git authentication..."
     - git config --global credential.helper store
     - echo "https://${GIT_USERNAME}:${GIT_ACCESS_TOKEN}@git.fa.edu.vn" > ~/.git-credentials
@@ -47,72 +49,17 @@ build:
     - git config --global user.email "$GIT_USERNAME@users.noreply.gitlab.com"
     - echo "Cloning repository..."
     - git clone -b $TARGET_BRANCH "http://git.fa.edu.vn/hcm25_cpl_net_06/team03_be.git" project_source || exit 1
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - echo "Creating SSH key file with proper format..."
-    - printf '%s\n' "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - echo "Debug - SSH key file first 3 lines:"
-    - head -3 ~/.ssh/id_rsa
-    - echo "Debug - SSH key file last 3 lines:"
-    - tail -3 ~/.ssh/id_rsa
-    - echo "Debug - SSH key line count:"
-    - wc -l ~/.ssh/id_rsa
-    - head -1 ~/.ssh/id_rsa | grep -q "BEGIN" || (echo "SSH key format error - first line:" && head -1 ~/.ssh/id_rsa && exit 1)
-    - tail -1 ~/.ssh/id_rsa | grep -q "END" || (echo "SSH key format error - last line:" && tail -1 ~/.ssh/id_rsa && exit 1)
-    - eval $(ssh-agent -s)
-    - ssh-add ~/.ssh/id_rsa || (echo "Failed to add SSH key" && exit 1)
-    - echo "Generating public key from private key"
-    - ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub
-    - echo "Public key content"
-    - cat ~/.ssh/id_rsa.pub
-    - echo "SSH key fingerprint"
-    - ssh-keygen -lf ~/.ssh/id_rsa.pub
-    - echo "=== IMPORTANT Copy this public key to server ==="
-    - echo "Run this on server echo '$(cat ~/.ssh/id_rsa.pub)' >> ~/.ssh/authorized_keys"
-    - echo "================================================"
-    - echo "Adding server to known_hosts"
-    - ssh-keyscan vps.purintech.id.vn >> ~/.ssh/known_hosts 2>/dev/null || echo "Warning ssh-keyscan failed, but continuing"
-    - echo "Alternatively adding server to known_hosts with timeout"
-    - timeout 10 ssh-keyscan vps.purintech.id.vn >> ~/.ssh/known_hosts 2>/dev/null || echo "Host key scan failed, will use StrictHostKeyChecking=no"
+    - echo "Setting up Docker login..."
+    - echo "$CI_JOB_TOKEN" | docker login "$CI_REGISTRY" --username gitlab-ci-token --password-stdin
   script:
-    - echo "Transferring source code to server"
+    - echo "Building Docker image directly in CI/CD runner..."
     - cd project_source
-    - tar -czf ../project.tar.gz .
-    - cd ..
-    - echo "Testing SSH connection"
-    - echo "First check if server is reachable"
-    - ping -c 3 vps.purintech.id.vn || echo "Ping failed, but trying SSH anyway"
-    - echo "Debug SSH connection with verbose output"
-    - ssh -vvv -o ConnectTimeout=30 -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "echo 'SSH connection successful'" || (echo "=== SSH Key Authentication Failed ===" && echo "Please add this public key to server's ~/.ssh/authorized_keys" && cat ~/.ssh/id_rsa.pub && echo "Run on server mkdir -p ~/.ssh && echo '$(cat ~/.ssh/id_rsa.pub)' >> ~/.ssh/authorized_keys && chmod 600 ~/.ssh/authorized_keys" && echo "=====================================" && exit 1)
-    - echo "SSH connection successful! Proceeding with deployment..."
-    - echo "Copying project file to server"
-    - scp -v -o ConnectTimeout=30 project.tar.gz fsoftguy@vps.purintech.id.vn:/tmp/ || (echo "SCP failed - ensure SSH public key is installed on server" && exit 1)
-    - echo "Building Docker image on server"
-    - |
-      ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "
-        echo 'Extracting source code...'
-        mkdir -p /tmp/team03_build
-        cd /tmp/team03_build
-        tar -xzf /tmp/project.tar.gz
-        
-        echo 'Check Docker daemon status...'
-        systemctl --user status docker 2>/dev/null || (echo 'Adding user to docker group and restarting session...' && sudo usermod -aG docker fsoftguy && newgrp docker) || echo 'Docker group setup attempted'
-        
-        echo 'Login to GitLab Container Registry...'
-        echo '$CI_JOB_TOKEN' | docker login '$CI_REGISTRY' --username gitlab-ci-token --password-stdin
-        
-        echo 'Building Docker image on server...'
-        docker build --no-cache --pull -t '$IMAGE_NAME:latest' -t '$IMAGE_NAME:$CI_COMMIT_SHA' .
-        
-        echo 'Pushing to GitLab Container Registry...'
-        docker push '$IMAGE_NAME:latest'
-        docker push '$IMAGE_NAME:$CI_COMMIT_SHA'
-        
-        echo 'Cleaning up build files...'
-        cd /tmp
-        rm -rf team03_build project.tar.gz
-      " || (echo "SSH command failed" && exit 1)
+    - echo "Building Docker image..."
+    - docker build --no-cache --pull -t "$IMAGE_NAME:latest" -t "$IMAGE_NAME:$CI_COMMIT_SHA" .
+    - echo "Pushing to GitLab Container Registry..."
+    - docker push "$IMAGE_NAME:latest"
+    - docker push "$IMAGE_NAME:$CI_COMMIT_SHA"
+    - echo "Docker build and push completed successfully!"
   tags:
     - cicd
 
@@ -148,9 +95,15 @@ deploy:
     - ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "echo 'SSH connection successful for deploy'"
     - |
       ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "
+        echo 'Logging into GitLab Container Registry...'
+        echo '$CI_JOB_TOKEN' | docker login '$CI_REGISTRY' --username gitlab-ci-token --password-stdin || echo 'Registry login failed - continuing anyway'
+        
         echo 'Stopping and removing old container...'
         docker stop team03-webapi || true
         docker rm team03-webapi || true
+        
+        echo 'Pulling latest image from GitLab Container Registry...'
+        docker pull '$IMAGE_NAME:latest' || echo 'Pull failed - image may not exist yet'
         
         echo 'Starting new container with latest image...'
         docker run -d --name team03-webapi -p 8080:80 --restart unless-stopped '$IMAGE_NAME:latest'
