--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,7 +59,7 @@ build:
         echo ~/docker-builds/team03-build-$(date +%Y%m%d-%H%M%S) > ~/.last-build-dir
       "
     - BUILD_DIR=$(ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "cat ~/.last-build-dir")
-    - echo "Build directory: $BUILD_DIR"
+    - echo "Build directory $BUILD_DIR"
     - echo "Transferring source code to server..."
     - cd project_source
     - tar -czf ../project.tar.gz .
