--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,8 +67,12 @@ build:
     - scp -o StrictHostKeyChecking=no project.tar.gz fsoftguy@vps.purintech.id.vn:$BUILD_DIR/
     - |
       ssh -o StrictHostKeyChecking=no fsoftguy@vps.purintech.id.vn "
-        cd $BUILD_DIR
-        echo 'Extracting source code...'
+        BUILD_DIR=\$(ls -d ~/docker-builds/team03-build-* | tail -1)
+        echo \"Using build directory: \$BUILD_DIR\"
+        
+        cd \$BUILD_DIR
+        echo 'Moving and extracting source code...'
+        mv ~/project.tar.gz .
         tar -xzf project.tar.gz
         rm project.tar.gz
         
@@ -124,7 +128,7 @@ build:
         
         echo 'Cleaning up build directory...'
         cd ~
-        rm -rf $BUILD_DIR
+        rm -rf \$BUILD_DIR
         
         echo 'Build process completed!'
       "
