--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,69 +109,62 @@ build:
           echo 'BUILD_STATUS=SUCCESS' > ~/build_status.txt
           
           echo 'Deploying immediately...'
-          echo 'Enhanced cleanup and deployment process...'
+          echo 'Simple deployment to port 8081...'
           
           # Step 1: Stop and remove containers by name
           echo 'Stopping containers by name...'
           docker stop team03-webapi 2>/dev/null || echo 'Container not running'
           docker rm -f team03-webapi 2>/dev/null || echo 'Container not found'
           
-          # Step 2: Find and stop ALL containers using port 8080
-          echo 'Finding all processes and containers on port 8080...'
-          
-          # Kill processes using port 8080
-          PIDS_ON_8080=\$(lsof -ti:8080 2>/dev/null || echo '')
-          if [ -n \"\$PIDS_ON_8080\" ]; then
-            echo \"Found PIDs on port 8080: \$PIDS_ON_8080\"
-            echo \$PIDS_ON_8080 | xargs -r kill -9 2>/dev/null || echo 'Kill processes failed'
-          fi
-          
-          # Alternative method using netstat and kill
-          NETSTAT_PIDS=\$(netstat -tulpn 2>/dev/null | grep ':8080' | awk '{print \$7}' | cut -d'/' -f1 | grep -v '-' | sort -u || echo '')
-          if [ -n \"\$NETSTAT_PIDS\" ]; then
-            echo \"Found netstat PIDs on port 8080: \$NETSTAT_PIDS\"
-            echo \$NETSTAT_PIDS | xargs -r kill -9 2>/dev/null || echo 'Kill netstat PIDs failed'
-          fi
-          
-          # Clean up containers by port mapping  
-          CONTAINERS_WITH_8080=\$(docker ps -a --format '{{.ID}} {{.Ports}}' | grep '8080' | awk '{print \$1}' || echo '')
-          if [ -n \"\$CONTAINERS_WITH_8080\" ]; then
-            echo \"Found containers with port 8080: \$CONTAINERS_WITH_8080\"
-            echo \$CONTAINERS_WITH_8080 | xargs -r docker stop 2>/dev/null || echo 'Stop containers failed'
-            echo \$CONTAINERS_WITH_8080 | xargs -r docker rm -f 2>/dev/null || echo 'Remove containers failed'
+          # Step 2: Clean up any remaining containers on port 8081
+          echo 'Finding containers with port 8081 mapping...'
+          CONTAINERS_WITH_8081=\$(docker ps -a --format '{{.ID}} {{.Ports}}' | grep '8081' | awk '{print \$1}' || echo '')
+          if [ -n \"\$CONTAINERS_WITH_8081\" ]; then
+            echo \"Found containers with port 8081: \$CONTAINERS_WITH_8081\"
+            echo \$CONTAINERS_WITH_8081 | xargs -r docker stop 2>/dev/null || echo 'Stop containers failed'
+            echo \$CONTAINERS_WITH_8081 | xargs -r docker rm -f 2>/dev/null || echo 'Remove containers failed'
           else
-            echo 'No containers found with port 8080 mapping'
+            echo 'No containers found with port 8081 mapping'
           fi
           
-          # Step 3: Force Docker system cleanup
-          echo 'Docker system cleanup...'
-          docker system prune -f --volumes 2>/dev/null || echo 'Docker cleanup failed'
-          
-          # Step 4: Wait longer and verify port is free
-          echo 'Waiting for port to be released...'
-          sleep 5
-          
-          echo 'Final port 8080 status:'
-          PORT_CHECK=\$(netstat -ln | grep ':8080' || echo '')
-          if [ -n \"\$PORT_CHECK\" ]; then
-            echo 'WARNING: Port 8080 still in use!'
-            echo \"\$PORT_CHECK\"
-            echo 'Processes on port 8080:'
-            lsof -i:8080 2>/dev/null || echo 'No processes found with lsof'
-            netstat -tulpn 2>/dev/null | grep ':8080' || echo 'No netstat processes found'
-            
-            echo 'Attempting to use alternative port mapping...'
-            ALT_PORT=8081
+          # Step 3: Quick port check
+          sleep 2
+          echo 'Port 8081 status:'
+          if netstat -ln | grep ':8081' > /dev/null 2>&1; then
+            echo 'WARNING: Port 8081 in use!'
+            netstat -ln | grep ':8081'
           else
-            echo 'Port 8080 is now free'
-            ALT_PORT=8080
+            echo 'Port 8081 is free'
           fi
           
-          echo \"Starting new container on port \$ALT_PORT...\"
+          echo 'Starting new container on port 8081 with Production environment...'
           CONTAINER_ID=\$(docker run -d \\
             --name team03-webapi \\
-            -p \$ALT_PORT:8080 \\
+            -p 8081:8081 \\
             --restart unless-stopped \\
+            -e ASPNETCORE_ENVIRONMENT=Production \\
+            -e \"ConnectionStrings__Local=Host=database.purintech.id.vn;Port=5432;Database=MovieTheater;Username=postgres;Password=<Hu@nH0aH0n9>;\" \\
+            -e \"JwtSettings__SecretKey=GvlKp62o31vaP3WzWsQDO3hOQpZdbhtt\" \\
+            -e \"JwtSettings__Issuer=YourAppName\" \\
+            -e \"JwtSettings__Audience=YourAppAudience\" \\
+            -e \"JwtSettings__AccessTokenExpiryMinutes=15\" \\
+            -e \"JwtSettings__RefreshTokenExpiryDays=7\" \\
+            -e \"VnPay__TmnCode=7QRTMNBH\" \\
+            -e \"VnPay__HashSecret=4046G9C8YY9H8WFSJG8AVB9VZNTT1D68\" \\
+            -e \"VnPay__PayUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html\" \\
+            -e \"VnPay__Version=2.1.0\" \\
+            -e \"VnPay__Command=pay\" \\
+            -e \"VnPay__CurrCode=VND\" \\
+            -e \"VnPay__Locale=vn\" \\
+            -e \"VnPay__PaymentBackReturnUrl=http://vps.purintech.id.vn:8081/api/Payment/vnpay-return/order\" \\
+            -e \"VnPay__PaymentBackReturnUrll=http://vps.purintech.id.vn:8081/api/Payment/vnpay-return/subscription\" \\
+            -e \"EmailSettings__SmtpServer=smtp.gmail.com\" \\
+            -e \"EmailSettings__SmtpPort=587\" \\
+            -e \"EmailSettings__SenderName=FCinema\" \\
+            -e \"EmailSettings__SenderEmail=fmoviecinema@gmail.com\" \\
+            -e \"EmailSettings__Username=fmoviecinema@gmail.com\" \\
+            -e \"EmailSettings__Password=jurk cvow hmtg dovz\" \\
+            -e \"EmailSettings__EnableSsl=true\" \\
             team03-webapi:latest 2>&1)
           
           echo \"Container creation result: \$CONTAINER_ID\"
@@ -192,8 +185,8 @@ build:
               sleep 8
               
               # Test application endpoint
-              echo \"Testing localhost:\$ALT_PORT connection...\"
-              HEALTH_CHECK=\$(curl -s -o /dev/null -w \"%{http_code}\" http://localhost:\$ALT_PORT 2>/dev/null || echo '000')
+              echo 'Testing localhost:8081 connection...'
+              HEALTH_CHECK=\$(curl -s -o /dev/null -w \"%{http_code}\" http://localhost:8081 2>/dev/null || echo '000')
               echo \"Health check response code: \$HEALTH_CHECK\"
               
               if [ \"\$HEALTH_CHECK\" != \"000\" ] && [ \"\$HEALTH_CHECK\" != \"404\" ]; then
@@ -206,18 +199,10 @@ build:
               # Display final URLs
               echo ''
               echo '===== DEPLOYMENT SUCCESSFUL ====='
-              if [ \"\$ALT_PORT\" = \"8080\" ]; then
-                echo 'Application URL: http://vps.purintech.id.vn:8080'
-                echo 'API Base URL: http://vps.purintech.id.vn:8080/api'
-                echo 'Swagger UI: http://vps.purintech.id.vn:8080/swagger'
-                echo 'Health Check: http://vps.purintech.id.vn:8080/health'
-              else
-                echo \"Application URL: http://vps.purintech.id.vn:\$ALT_PORT\"
-                echo \"API Base URL: http://vps.purintech.id.vn:\$ALT_PORT/api\"
-                echo \"Swagger UI: http://vps.purintech.id.vn:\$ALT_PORT/swagger\"
-                echo \"Health Check: http://vps.purintech.id.vn:\$ALT_PORT/health\"
-                echo \"NOTE: Using alternative port \$ALT_PORT due to port 8080 conflict\"
-              fi
+              echo 'Application URL: http://vps.purintech.id.vn:8081'
+              echo 'API Base URL: http://vps.purintech.id.vn:8081/api'
+              echo 'Swagger UI: http://vps.purintech.id.vn:8081/swagger'
+              echo 'Health Check: http://vps.purintech.id.vn:8081/health'
               echo '=================================='
               echo 'Your application is now live and accessible!'
               echo 'BUILD_STATUS=SUCCESS' > ~/build_status.txt
@@ -234,8 +219,8 @@ build:
             echo \"Docker run output: \$CONTAINER_ID\"
             echo 'Checking Docker status:'
             docker ps -a | grep team03 || echo 'No team03 containers found'
-            echo \"Checking port \$ALT_PORT availability:\"
-            netstat -ln | grep \":\$ALT_PORT\" || echo \"Port \$ALT_PORT appears free\"
+            echo 'Checking port 8081 availability:'
+            netstat -ln | grep ':8081' || echo 'Port 8081 appears free'
             echo 'BUILD_STATUS=DEPLOY_FAILED' > ~/build_status.txt
             exit 1
           fi
